--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -841,7 +841,8 @@ MySQL database structure version: {{ App.Config.configArr.schema }}</p>
           <option value='0'{{ App.Config.configArr.ldap_use_tls == '0' ? ' selected' }}>{{ 'No'|trans }}</option>
         </select>
 
-        <label for='ldap_search_attr'>By which LDAP attribute the user will be found (default is 'mail')</label>
+        <label for='ldap_search_attr'>By which LDAP attribute the user will be found (default is 'mail').</label>
+        <div class='smallgray'>You can search for several attributes by separating them with a comma (e.g. uid,mail).</div>
         <input class='form-control col-md-4' type='text' placeholder='mail' value='{{ App.Config.configArr.ldap_search_attr }}' name='ldap_search_attr' id='ldap_search_attr' />
 
         <label for='ldap-team'>What attribute to look for the team name:</label>
