fix visibility field of extended search team groups are not included anymore

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -153,10 +153,10 @@
           <dd>Term or Quoted term</dd>
           <dt><span class='token keyword'>visibility</span></dt>
           <dd>Term or Quoted term<br>
-              A group name (e.g., <span class='token string'>'Lab Heroes'</span>) or
+              <!--A group name (e.g., <span class='token string'>'Lab Heroes'</span>) or-->
               <span class='token string'>public</span>,
               <span class='token string'>organization</span>,
-              <span class='token string'>team</span>,
+              <span class='token string'>myteams</span>,
               <span class='token string'>user</span>, or
               <span class='token string'>useronly</span>.
           </dd>
