fix regex for orcid. fix #4041

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -280,7 +280,7 @@
     <div class='row'>
         <div class='col-md-6'>
             <label for='orcid'>ORCID</label>
-            <input class='form-control' placeholder='0000-0002-1234-1111' title='0000-1111-2222-3333' pattern='[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}' id='orcid' name='orcid' value='{{ App.Users.userData.orcid }}' />
+            <input class='form-control' placeholder='0000-0002-1234-1111' title='0000-1111-2222-3333' pattern='[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{3}[0-9X]' id='orcid' name='orcid' value='{{ App.Users.userData.orcid }}' />
         </div>
     </div>
 
