--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -139,7 +139,7 @@
                   </div>
 
                 <!-- TEXT -->
-                {% elseif ext matches '/txt$/i' %}
+                {% elseif ext matches '/(txt|md)$/i' %}
                   <span class='eye-overlay'
                     data-action='show-plain-text'
                     data-storage='{{ upload.storage }}'
