ext without raw filter

--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -151,7 +151,7 @@
                     data-storage='{{ upload.storage }}'
                     data-path='{{ upload.long_name }}'
                     data-name='{{ upload.real_name }}'
-                    data-ext='{{ ext|raw }}'>
+                    data-ext='{{ ext }}'>
                     <i class='fas fa-file-alt thumb rounded mx-auto d-block text-center'></i>
                   </span>
 
