remove beta tag from ldap

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -26,7 +26,7 @@ MySQL database structure version: {{ App.Config.configArr.schema }}</p>
   <li data-action='switch-tab' data-tabtarget='7'>SAML</li>
   <li data-action='switch-tab' data-tabtarget='8'>{{ 'Privacy policy'|trans }}</li>
   <li data-action='switch-tab' data-tabtarget='9'>{{ 'External auth'|trans }}</li>
-  <li data-action='switch-tab' data-tabtarget='10'>LDAP</li><span class='beta'>beta</span>
+  <li data-action='switch-tab' data-tabtarget='10'>LDAP</li>
   <li data-action='switch-tab' data-tabtarget='11'>{{ 'Uploads'|trans }}</li>
 </ul>
 
