--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -235,7 +235,13 @@
       <div id='body_view' class='pt-2' {{ not displayMainText ? 'hidden' }}>{{ body|raw }}</div>
   {% endif %}
 
-  <div id='metadataDiv' class='col-md-6'></div>
+  <!-- METADATA view -->
+  {% if Entity.entityData.metadata %}
+    <div class='box col-md-12'>
+      <h4>{{ 'Extra fields'|trans }}</h4>
+      {{ Entity.entityData.metadata|formatMetadata }}
+    </div>
+  {% endif %}
 
 </section>
 
