--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -1,4 +1,4 @@
-{# required vars: rw visibilityArr myTeamsArr myTeamgroupsArr usersArr #}
+{# required vars: rw visibilityArr teamsArr myTeamgroupsArr usersArr #}
 <!-- Modal for permission edit -->
 <div class='modal fade' id='permModal-{{ rw }}' tabindex='-1' role='dialog' aria-labelledby='permModalLabel' aria-hidden='true'>
   <div class='modal-dialog' role='document'>
@@ -24,7 +24,7 @@
           <label for='{{ rw }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
           <select id='{{ rw }}_select_teams' multiple class='form-control' autocomplete='off'>
-            {% for team in myTeamsArr %}
+            {% for team in teamsArr %}
               <option value='team:{{ team.id }}'
               {{ Entity.entityData.canread|isInJsonArray('teams', team.id) ? ' selected' }}
               >{{ 'Team'|trans }} - {{ team.name }}</option>
