--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -147,7 +147,8 @@
       <hr>
       <h3>{{ 'Existing groups'|trans }}</h3>
       {% for teamGroup in teamGroupsArr %}
-        <div class='box'>
+        {# not sure why lh-lg doesn't work here, so add a style attribute directly #}
+        <div class='box' style='line-height: 250%'>
           <a class='clickable teamGroupDelete float-right' data-id='{{ teamGroup.id }}' title='{{ 'Delete'|trans }}'>
             <i class='fas fa-trash-alt'></i>
           </a>
