--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -247,6 +247,8 @@
         </div>
       {% endif %}
 
+      {# only show MFA setting if not enforced #}
+      {% if showMFA %}
         <h4>{{ 'Two Factor Authentication'|trans }}</h4>
         <div class='row'>
           <div class='col-md-6'>
@@ -257,9 +259,10 @@
             </select>
           </div>
         </div>
-        <div class='mt-4 text-center'>
-          <button type='submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
-        </div>
+      {% endif %}
+      <div class='mt-4 text-center'>
+        <button type='submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+      </div>
     </form>
 
   <hr><br>
