--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -34,7 +34,6 @@
           {{ App.Session.get('csrf')|csrf }}
           <label for='import_modal_target'>{{ '1. Select where to import:'|trans }}</label>
           <select class='form-control' id='import_modal_target' autocomplete='off' name='target'>
-            <option selected disabled>-------</option>
             <option disabled>{{ 'Import in database'|trans }}</option>
             {% for itemsType in itemsCategoryArr %}
               <option value='items:{{ itemsType.category_id }}'>{{ itemsType.category }}</option>
@@ -67,10 +66,12 @@
           <label class='d-block' for='import_modal_file_input'>{{ '3. Select a file to import:'|trans }}</label>
           <input id='import_modal_file_input' required name='file' type='file' accept='.eln,.zip,.csv' />
           <input name='type' type='hidden' value='archive' />
-          <p class='smallgray'>{{ 'Allowed extensions: .eln, .zip, .csv'|trans }}</p>
+          <p class='smallgray'>{{ 'Allowed extensions: .eln, .zip, .csv'|trans }}<br>
+          {{ 'Maximum size: %s'|format(maxUploadSizeRaw)|trans }}</p>
 
           <div class='mt-4 text-center'>
-            <button type='submit' class='button btn btn-primary'>{{ 'Import'|trans }}</button>
+            <div id='errorHolder' class='alert-danger m-2'></div>
+            <button type='submit' data-action='check-max-size' data-maxsize='{{ maxUploadSize }}' data-input='import_modal_file_input' class='button btn btn-primary'>{{ 'Import'|trans }}</button>
           </div>
 
         </form>
