allow edition of title in event modal. fix #4052

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -24,7 +24,7 @@
         </button>
       </div>
       <div class='modal-body' data-wait='{{ 'Please wait…' }}'>
-        <h3 id='eventTitle'></h3>
+        <h3 id='eventTitle' class='editable hl-hover'></h3>
         <!-- START AND END TIMES -->
         <div class='mt-2'>
           <label for='schedulerEventModalStart'>{{ 'Start time'|trans }}</label>
