--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -143,18 +143,18 @@
     <div class='col'>
       <i class='fas fa-tags fa-fw mr-1'></i><label for='createTagInput'>{{ 'Tags'|trans }}</label>
       <div class='tags form-inline'>
-        <div id='tags_div_{{ Entity.id }}' class='mb-2 mb-sm-0'>
+        <div id='tags_div_{{ Entity.id }}' class='d-flex flex-wrap mb-1'>
           <!--  build the tag array -->
           {% if Entity.entityData.tags|length > 0 %}
             {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
             {% set tagsValueArr = Entity.entityData.tags|split('|') %}
             {% for tag in tagsValueArr -%}
-              <a class='tag mr-1 hover-danger' data-action='unreference-tag' data-tagid='{{ tagsIdArr[loop.index0] }}'>{{ tag|raw }}</a>
+              <a class='tag margin-1px hover-danger' data-action='unreference-tag' data-tagid='{{ tagsIdArr[loop.index0] }}'>{{ tag|raw }}</a>
             {%- endfor -%}
           {% endif %}
         </div>
-        <input type='text' id='createTagInput' data-teamid='{{ App.Users.userData.team }}' data-autocomplete='tags' class='createTagInput form-control' placeholder='{{ 'Add a tag'|trans }}' />
       </div>
+      <input type='text' id='createTagInput' data-teamid='{{ App.Users.userData.team }}' data-autocomplete='tags' class='createTagInput form-control col-md-2' placeholder='{{ 'Add a tag'|trans }}' />
     </div>
   </div>
 
