--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -74,9 +74,9 @@
 
       {% set itemtagsArr = tagsArr[item.id] %}
       {% if itemtagsArr|length > 0 %}
-        <span class='tags'><i class='fas fa-tags mr-1'></i>
+        <span class='tags d-flex flex-wrap'><i class='fas fa-tags mr-1'></i>
           {% for tag in itemtagsArr %}
-            <a class='tag mathjax-ignore' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+            <a class='tag mathjax-ignore margin-1px' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
           {% endfor %}
         </span>
       {% endif %}
