--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -149,7 +149,7 @@
           {% endif %}
         <!-- build the tag array -->
         {% if Entity.entityData.tags|length > 0 %}
-          <span class='tags mathjax-ignore'>
+          <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
             <i class='fas fa-tags mr-2'></i>
             {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
             {% set tagsValueArr = Entity.entityData.tags|split('|') %}
